2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added vi patch

2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Refactored emacs mode

2006-03-12 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Merged changes from trunk 1158:1201
	* Did some rearranging of method order in Readline 

2006-02-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Started Refactor branch
	* Refactored line_buffer to separate class
	* Refactored history buffer to separate class
	* 

2006-01-31 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	
	* Added experimental mulitline paste. Thís version ALWAYS adds 
	  a final newline so there is what you paste is always executed!!!
	* Moved win32paste config parameters from module level into 
	  readline class (in preparation for adding config file parameter)
	* Added svn url to long description
	
2006-01-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Moved exit key (control-D) logic to separate key dispatch handler
	* Added bind_exit_key to config file
	* Added un_bind_key command to configfile
	* Added un_bind_exit_key command to configfile

2006-01-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Added doc directory to setup scripts

2006-01-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Added copyright notices to all files
	* Created release.py file to contain relesase related information
	* Started egg_setup.py
	* Changed setup.py to use release.py
	*
	
2006-01-23  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Default is now to insert non bound characters. 
	* rename pyreadline.py to rlmain.py
	* rename of config file to pyreadlineconfig.ini
	* Change to config file syntax
	* bell is now silent as deafult
	* removed specific keybinding code for keypad
	
2006-01-22  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Default is now to insert non bound characters unless they are 
	  pressed together with control.