@@ -1,5 +1,6 @@
 2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Added vi patch
+	* Added visible selection mode to emacs mode
 
 2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Refactored emacs mode
